deployment-openshift.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: hello
  labels:
    application: hello
spec:
  template:
    metadata:
      labels:
        name: hello
    spec:
      containers:
        - name: hello
          image: hello:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
  replicas: 1
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - hello
        from:
          kind: ImageStreamTag
          name: hello:latest
  strategy:
    type: Rolling
  paused: false
  revisionHistoryLimit: 2
