deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  labels:
    application: hello
  namespace: example
spec:
  replicas: 2
  selector:
    matchLabels:
      name: hello  
  template:
    metadata:
      labels:
        name: hello
    spec:
      containers:
        - name: hello
          image: default-route-openshift-image-registry.apps.dmzsd.kbstar.local/example/hello:latest
          imagePullPolicy: Always          
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
