service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello
  labels:
      application: hello
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: hello
  type: ClusterIP
