ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello
  namespace: example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
  - host: hello.ingress
    http:
     paths:
     - path: /
       backend:
        serviceName: hello
        servicePort: 8080
